WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55434
[Chromium][DRT] WebTask should use webkit_support::TaskAdaptor
https://bugs.webkit.org/show_bug.cgi?id=55434
Summary
[Chromium][DRT] WebTask should use webkit_support::TaskAdaptor
Hajime Morrita
Reported
2011-02-28 18:19:56 PST
From
http://code.google.com/p/chromium/issues/detail?id=73675
This will fix memory leak.
Attachments
Patch
(1.88 KB, patch)
2011-02-28 22:32 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(3.58 KB, patch)
2011-03-01 00:20 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(4.03 KB, patch)
2011-03-01 02:46 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(2.61 KB, patch)
2011-03-02 23:06 PST
,
Hajime Morrita
tkent
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2011-02-28 22:32:37 PST
Created
attachment 84190
[details]
Patch
WebKit Review Bot
Comment 2
2011-02-28 22:36:12 PST
Attachment 84190
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8075502
Hajime Morrita
Comment 3
2011-03-01 00:20:24 PST
Created
attachment 84195
[details]
Patch
Hajime Morrita
Comment 4
2011-03-01 00:30:54 PST
> Patch
Kent-san, could you take a look? I updated the patch to - inherit TaskAdaptor directly - roll DEPS
WebKit Review Bot
Comment 5
2011-03-01 00:35:40 PST
Attachment 84195
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8076513
Kent Tamura
Comment 6
2011-03-01 00:42:08 PST
Comment on
attachment 84195
[details]
Patch r- because of a build failure. Otherwise, it looks ok.
Hajime Morrita
Comment 7
2011-03-01 02:46:35 PST
Created
attachment 84204
[details]
Patch
Hajime Morrita
Comment 8
2011-03-01 02:47:24 PST
Kent-san, thank you for your quick review! I updated DEPS and am watching the bot...
WebKit Review Bot
Comment 9
2011-03-01 07:26:07 PST
Attachment 84204
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8077407
Kent Tamura
Comment 10
2011-03-01 18:20:43 PST
(In reply to
comment #9
)
>
Attachment 84204
[details]
did not build on chromium: > Build output:
http://queues.webkit.org/results/8077407
> KeyError: 'Duplicate ID 70665AB9CDC334269329179C, objects "{\'children\': [<PBXReferenceProxy \'libjpeg.a\' at 0x102e24950>], \'name\': \'Products\', \'sourceTree\': \'<group>\'}" and "{\'children\': [<PBXReferenceProxy \'libjpeg_turbo.a\' at 0x102e21d90>], \'name\': \'Products\', \'sourceTree\': \'<group>\'}" in "WebKit"'
We had better remove libjpeg_gyp_path definition from WebCore.gyp if libjpeg-turbo doesn't change layout test results, or set use_libjpeg_turbo=0.
Hajime Morrita
Comment 11
2011-03-02 23:06:37 PST
Created
attachment 84523
[details]
Patch
Hajime Morrita
Comment 12
2011-03-02 23:07:54 PST
Chromium roll is done at
http://trac.webkit.org/changeset/80174
, thus I removed that part from the patch.
Kent Tamura
Comment 13
2011-03-02 23:24:18 PST
Comment on
attachment 84523
[details]
Patch ok
Hajime Morrita
Comment 14
2011-03-04 02:07:55 PST
Committed
r80340
: <
http://trac.webkit.org/changeset/80340
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug