2011-03-02  MORITA Hajime  <morrita@google.com>

Reviewed by Kent Tamura.

        [Chromium][DRT] WebTask should use webkit_support::TaskAdaptor
        https://bugs.webkit.org/show_bug.cgi?id=55434

        Changed WebTask to be a subclass of webkit_support::TaskAdaptor
        and passed the object webkit_support::PostDelayedTask directly.

        Note that the change keeps postTask() as is because it has a
        semantics taht webkit_support::PostDelayedTask() has; It jumps to
        the main thread.

        * DumpRenderTree/chromium/Task.cpp:
        (postDelayedTask):
        * DumpRenderTree/chromium/Task.h:
        (WebTask::Run):

Canonical link: https://commits.webkit.org/70234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80340 268f45cc-cd09-0410-ab3c-d52691b4dbfc